--- a/slack-reminder/client/package.json
+++ b/slack-reminder/client/package.json
@@ -31,5 +31,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "bootstrap": "^4.4.1",
+    "npm": "^6.14.5",
+    "react-bootstrap": "^1.0.1",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2"
   }
 }
