set time zone to jst in alpine linux

--- a/slack-reminder/Dockerfile
+++ b/slack-reminder/Dockerfile
@@ -3,5 +3,8 @@ ENV PYTHONUNBUFFERED 1
 RUN mkdir -p /usr/src/app
 WORKDIR /usr/src/app
 COPY requirements.txt /usr/src/app
+RUN apk --update add tzdata && \
+    rm -rf /var/cache/apk/*
+ENV TZ Asia/Tokyo
 RUN pip install -U pip && pip install -r requirements.txt
 COPY . /usr/src/app
